version 4.1.2
- fixed a bug in the 'resize' function causing the new image width to be calculated incorrectly when only height was provided (reported by Bernd Fischer)
- the range of pixel coordinates displayed in the Javascript viewer is now (1,1):(w,h) rather than (0,0):(w-1,h-1) and matches the indices of the corresponding Image array

version 4.1.1
- "inline double peekpixel" has been changed to "static inline double peekpixel", to be C99 compatible (thanks to Nathan Coulter)

version 3.99.19
- improved JavaScript image viewer with some minor bugs fixed
- removed unused files from 'scripts/'
- added 'NEWS.Rd'

version 3.99.18
- further improvements to the JavaScript image viewer; exit on-screen help using either 'ESC' or 'Q'
- added 'transpose' to unit tests

version 3.99.17:
- removed all dependencies towards GTK+ and ImageMagick
- deprecated: blur, equalize,
- deprecated: drawtext, drawfont
- deprecated: getFeatures, hullFeatures, zernikeMoments, edgeProfile, edgeFeatures
- deprecated: haralickFeatures, haralickMatrix
- deprecated: moments, smoments, rmoments, cmoments
- overhauled the testing procedure in tests/test.R

version 3.99.16
- CSS fix disabling bilinear filtering of rescaled images in the JavaScript image viewer

version 3.99.15
- numerous improvements and bug fixes to the JavaScript image viewer, including: on-screen help displayed by pressing 'H', and fixed mouse wheel action (now consistent behavior across browsers and platforms)

version 3.99.14
- minor documentation updates

version 3.99.13
- improved JavaScript image viewer with upgraded user interface

version 3.99.12
- renamed 'swapXY' to 'transpose'
- updated documentation on 'transpose', 'readImage', writeImage', and 'display'

version 3.99.11
- better argument handling in the 'display' function
- a message rather than a warning is now issued when displaying multiframe images using the 'raster' method
- range clipping to [0:1] in 'writeImage'

version 3.99.10